Finished Gatsby tutorial part 6

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -28,3 +28,13 @@
     font-weight: 700;
     margin: 3rem 0;
 }
+
+.article {
+    background-color: rgb(187, 187, 187);
+    padding: 0.5rem;
+    margin: 1rem auto;
+}
+
+.article h2 {
+    margin: 0 !important;
+}
